# Vector_Text_based_Editor

./: CMakeLists.txt  Main menu.c  Window.c  area.c  area.h  main menu.h  main.c  pixel.c  pixel.h
Shapes/: Point.c  Point.h  Shape.c  Shape.h
Shapes/Circle/: Circle.c  Circle.h
Shapes/Line/: Line.c  Line.h
Shapes/Polygon/: Polygon.c  Polygon.h
Shapes/Rectangle/: Rectangle.c  Rectangle.h
Shapes/Square/: Square.c  Square.h
Vector Text-based Editor/: CMakeLists.txt  Main menu.c  Window.c  area.c  area.h  commande.c  commande.h  main menu.h  main.c  pixel.c  pixel.h
Vector Text-based Editor/Circle/: Circle.c
Vector Text-based Editor/Line/: Line.c  Line.h
Vector Text-based Editor/Polygon/: Polygon.h
Vector Text-based Editor/Rectangle/: Rectangle.c  Rectangle.h
Vector Text-based Editor/Shapes/: Point.c  Point.h  Shape.c  Shape.h
Vector Text-based Editor/Shapes/Circle/: Circle.c  Circle.h
Vector Text-based Editor/Shapes/Line/: Line.c  Line.h
Vector Text-based Editor/Shapes/Point/: Point.c  Point.h
Vector Text-based Editor/Shapes/Polygon/: Polygon.c  Polygon.h
Vector Text-based Editor/Shapes/Rectangle/: Rectangle.c  Rectangle.h
Vector Text-based Editor/Shapes/Square/: Square.c  Square.h
Vector Text-based Editor/Square/: Square.c
